--- a/app/src/main/res/layout/activity_detail_article.xml
+++ b/app/src/main/res/layout/activity_detail_article.xml
@@ -78,7 +78,7 @@
             android:layout_width="414dp"
             android:layout_height="387dp"
             android:layout_marginTop="24dp"
-            android:fontFamily="@font/reguler"
+            android:fontFamily="@font/regular"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
