--- a/app/src/main/res/layout/activity_setting_menu.xml
+++ b/app/src/main/res/layout/activity_setting_menu.xml
@@ -7,99 +7,68 @@
     tools:context=".SettingMenu">
 
     <Button
-        android:id="@+id/account"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="656dp"
-        android:text="@string/account"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textAlignment="textStart"
-        android:backgroundTint="@color/white"
-        app:cornerRadius="8dp"
-        app:rippleColor="#33AAAAAA"
-        android:strokeColor="@color/color_primary"
-        app:strokeWidth="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
         android:id="@+id/theme"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="656dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="?attr/colorSurface"
+        android:strokeColor="?attr/colorPrimary"
         android:text="@string/theme"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         android:textAlignment="textStart"
-        android:backgroundTint="@color/white"
+        android:textColor="?attr/colorOnSurface"
+        android:textStyle="bold"
         app:cornerRadius="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:rippleColor="#33AAAAAA"
-        android:strokeColor="@color/color_primary"
-        app:strokeWidth="2dp"
-        app:layout_constraintTop_toBottomOf="@+id/account"
-        tools:layout_editor_absoluteX="0dp" />
+        app:strokeWidth="2dp" />
 
     <Button
         android:id="@+id/language"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="656dp"
+        android:backgroundTint="?attr/colorSurface"
+        android:strokeColor="?attr/colorPrimary"
         android:text="@string/language"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         android:textAlignment="textStart"
-        android:backgroundTint="@color/white"
+        android:textColor="?attr/colorOnSurface"
+        android:textStyle="bold"
         app:cornerRadius="8dp"
-        app:rippleColor="#33AAAAAA"
-        android:strokeColor="@color/color_primary"
-        app:strokeWidth="2dp"
+        app:layout_constraintEnd_toEndOf="@+id/theme"
+        app:layout_constraintStart_toStartOf="@+id/theme"
         app:layout_constraintTop_toBottomOf="@+id/theme"
-        tools:layout_editor_absoluteX="0dp" />
+        app:rippleColor="#33AAAAAA"
+        app:strokeWidth="2dp" />
 
     <Button
         android:id="@+id/about"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="656dp"
+        android:backgroundTint="?attr/colorSurface"
         android:text="@string/about"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         android:textAlignment="textStart"
-        android:backgroundTint="@color/white"
+        android:textColor="?attr/colorOnSurface"
+        android:textStyle="bold"
         app:cornerRadius="8dp"
-        app:rippleColor="#33AAAAAA"
-        android:strokeColor="@color/color_primary"
-        app:strokeWidth="2dp"
+        app:layout_constraintEnd_toEndOf="@+id/language"
+        app:layout_constraintStart_toStartOf="@+id/language"
         app:layout_constraintTop_toBottomOf="@+id/language"
-        tools:layout_editor_absoluteX="0dp" />
+        app:rippleColor="#33AAAAAA"
+        app:strokeWidth="2dp"/>
 
     <Button
         android:id="@+id/btnSignOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="340dp"
-        android:backgroundTint="@color/color_primary"
         android:text="@string/signOut"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toBottomOf="@+id/about"/>
 
     <TextView
         android:id="@+id/version"
