--- a/app/src/main/res/layout/item_row_notification.xml
+++ b/app/src/main/res/layout/item_row_notification.xml
@@ -40,9 +40,8 @@
             android:layout_toEndOf="@id/imgWarning"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnSurface"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toEndOf="@+id/imgWarning"
             card_view:layout_constraintTop_toTopOf="@+id/imgWarning"
             tools:text="@string/titleWarning" />
@@ -57,12 +56,9 @@
             android:layout_toEndOf="@id/imgWarning"
             android:textSize="14sp"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toEndOf="@+id/imgWarning"
             card_view:layout_constraintTop_toTopOf="@+id/imgWarning"
-            tools:ignore="DuplicateIds,SmallSp"
             tools:text="@string/detailWarning" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
