--- a/app/src/main/res/drawable/white_banner.xml
+++ b/app/src/main/res/drawable/white_banner.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
-            <corners android:radius="39dp"/>
+            <solid android:color="?attr/colorSurface" />
+            <corners android:radius="39dp" />
         </shape>
     </item>
 
