--- a/app/src/main/res/layout/activity_detail_article.xml
+++ b/app/src/main/res/layout/activity_detail_article.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/img_item_image"
+        android:id="@+id/iv_article_image"
         android:layout_width="410dp"
         android:layout_height="556dp"
         android:adjustViewBounds="true"
@@ -39,6 +39,7 @@
         tools:src="@drawable/img" />
 
     <ImageView
+        android:id="@+id/iv_back"
         android:layout_width="42dp"
         android:layout_height="46dp"
         android:layout_marginTop="16dp"
@@ -57,10 +58,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/img_item_image">
+        app:layout_constraintTop_toTopOf="@+id/iv_article_image">
 
         <TextView
-            android:id="@+id/titleArticle"
+            android:id="@+id/tv_titleArticle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
@@ -73,7 +74,7 @@
             tools:text="@string/titleArt" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_description"
             android:layout_width="414dp"
             android:layout_height="387dp"
             android:layout_marginTop="24dp"
@@ -81,7 +82,7 @@
             android:textColor="?attr/colorOnSurface"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleArticle"
+            app:layout_constraintTop_toBottomOf="@+id/tv_titleArticle"
             tools:text="@string/description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
