--- a/app/src/main/res/layout/item_row_parameter.xml
+++ b/app/src/main/res/layout/item_row_parameter.xml
@@ -18,7 +18,7 @@
         android:padding="8dp">
 
         <ImageView
-            android:id="@+id/imgWarning"
+            android:id="@+id/img_parameter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/imgWarning"
@@ -29,51 +29,52 @@
             tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/tittleWarning"
+            android:id="@+id/tittle_parameter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/imgWarning"
+            android:layout_toEndOf="@id/img_parameter"
             android:textColor="?attr/colorOnSurface"
             android:textSize="18sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toStartOf="@+id/constraintLayout"
-            card_view:layout_constraintStart_toEndOf="@+id/imgWarning"
-            card_view:layout_constraintTop_toTopOf="@+id/imgWarning"
-            tools:text="@string/titleWarning" />
+            card_view:layout_constraintStart_toEndOf="@+id/img_parameter"
+            card_view:layout_constraintTop_toTopOf="@+id/img_parameter"
+            tools:text="@string/title_parameter" />
 
         <TextView
-            android:id="@+id/detailWarning"
+            android:id="@+id/detail_parameter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/imgWarning"
+            android:layout_toEndOf="@id/img_parameter"
             android:textSize="14sp"
-            card_view:layout_constraintBottom_toBottomOf="@+id/imgWarning"
+            card_view:layout_constraintBottom_toBottomOf="@+id/img_parameter"
             card_view:layout_constraintEnd_toStartOf="@+id/constraintLayout"
             card_view:layout_constraintHorizontal_bias="0.11"
-            card_view:layout_constraintStart_toEndOf="@+id/imgWarning"
-            tools:text="@string/detailWarning" />
+            card_view:layout_constraintStart_toEndOf="@+id/img_parameter"
+            tools:text="@string/detail_parameter" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="60dp"
             android:layout_height="30dp"
             android:background="@drawable/green_banner"
-            card_view:layout_constraintBottom_toBottomOf="@+id/imgWarning"
+            card_view:layout_constraintBottom_toBottomOf="@+id/img_parameter"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="1.0"
-            card_view:layout_constraintStart_toEndOf="@+id/imgWarning"
-            card_view:layout_constraintTop_toTopOf="@+id/imgWarning">
+            card_view:layout_constraintStart_toEndOf="@+id/img_parameter"
+            card_view:layout_constraintTop_toTopOf="@+id/img_parameter">
 
             <TextView
+                android:id="@+id/tv_percent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/colorSurface"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent"
-                android:textColor="?attr/colorSurface"
                 tools:text="@string/percent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
