Perbaikan btn bookmark

--- a/app/src/main/res/layout/activity_tanaman.xml
+++ b/app/src/main/res/layout/activity_tanaman.xml
@@ -7,6 +7,7 @@
     tools:context=".TanamanActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -77,16 +78,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/iv_bookmark"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="396dp"
-        android:src="@drawable/bookmark"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_bookmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="?attr/colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.92"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.35000002"
+        app:srcCompat="@drawable/ic_baseline_bookmark_24" />
+
 
     <ImageView
         android:id="@+id/iv_back"
