--- a/app/src/main/res/layout/activity_iotactivity.xml
+++ b/app/src/main/res/layout/activity_iotactivity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_IOT"
     android:layout_width="match_parent"
@@ -7,76 +8,75 @@
     android:background="@android:color/white"
     tools:context=".IOTActivity">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/imgProfile"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/imgProfile"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@tools:sample/avatars" />
 
-            <ImageView
-                android:id="@+id/imgProfile"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:contentDescription="@string/imgProfile"
-                tools:src="@tools:sample/avatars" />
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/imgProfile"
+            app:layout_constraintTop_toTopOf="@+id/imgProfile"
+            tools:text="@string/name_example" />
 
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="7dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_toEndOf="@+id/imgProfile"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                tools:text="@string/name_example" />
+        <TextView
+            android:id="@+id/tvAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="14sp"
+            app:layout_constraintStart_toEndOf="@+id/imgProfile"
+            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            tools:text="@string/address_example" />
 
-            <TextView
-                android:id="@+id/tvAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imgProfile"
-                android:layout_marginStart="7dp"
-                android:layout_marginTop="35dp"
-                android:layout_marginEnd="-99dp"
-                android:layout_toEndOf="@+id/imgProfile"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="14sp"
-                tools:text="@string/address_example" />
-
-            <Button
-                android:id="@+id/btnEditProfile"
-                android:layout_width="122dp"
-                android:layout_height="37dp"
-                android:layout_alignTop="@+id/tvName"
-                android:layout_marginStart="171dp"
-                android:layout_marginTop="55dp"
-                android:layout_marginBottom="12dp"
-                android:layout_toEndOf="@+id/imgProfile"
-                android:backgroundTint="?attr/colorOnSurface"
-                android:text="@string/editProfile"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="?attr/colorSurface"
-                android:textSize="12sp" />
-        </RelativeLayout>
+        <Button
+            android:id="@+id/btnEditProfile"
+            android:layout_width="122dp"
+            android:layout_height="37dp"
+            android:layout_alignTop="@+id/tvName"
+            android:layout_marginStart="156dp"
+            android:layout_marginTop="64dp"
+            android:layout_toEndOf="@+id/imgProfile"
+            android:backgroundTint="?attr/colorOnSurface"
+            android:text="@string/editProfile"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="?attr/colorSurface"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/imgProfile"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvIOT"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgProfile"
             tools:text="@string/tvIOTResult" />
 
         <ImageView
@@ -84,8 +84,11 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:layout_marginTop="@+id/tvIOT"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/imgIOT"
+            app:layout_constraintEnd_toEndOf="@+id/tvIOT"
+            app:layout_constraintStart_toStartOf="@+id/tvIOT"
+            app:layout_constraintTop_toBottomOf="@+id/tvIOT"
             tools:src="@tools:sample/avatars" />
 
         <TextView
@@ -93,17 +96,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@+id/imgIOT"
+            android:layout_marginTop="16dp"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/imgIOT"
+            app:layout_constraintStart_toStartOf="@+id/imgIOT"
+            app:layout_constraintTop_toBottomOf="@+id/imgIOT"
             tools:text="@string/tvNameIOT" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@+id/tvNameIOT"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvNameIOT"
+            tools:layout_editor_absoluteX="0dp"
             tools:listitem="@layout/item_row_parameter" />
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
