--- a/app/src/main/res/layout/fragment_detail_profile.xml
+++ b/app/src/main/res/layout/fragment_detail_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailProfile">
+    tools:context=".DetailProfileFragment">
 
     <ImageView
         android:id="@+id/imgProfile"
