add: more fab gallery and fab camera to fragment_identification_menu.xml

--- a/app/src/main/res/layout/fragment_identification_menu.xml
+++ b/app/src/main/res/layout/fragment_identification_menu.xml
@@ -17,6 +17,35 @@
         tools:listitem="@layout/item_row_bookmark" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:contentDescription="@string/content_description_camera"
+        android:focusable="true"
+        android:src="@drawable/ic_camera_24"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
+        app:layout_constraintEnd_toEndOf="@+id/btnAdd"
+        app:layout_constraintStart_toStartOf="@+id/btnAdd"
+        app:srcCompat="@drawable/ic_camera_24" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        android:contentDescription="@string/content_description_gallery"
+        android:focusable="true"
+        android:src="@drawable/ic_gallery_24"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
+        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
+        app:layout_constraintTop_toTopOf="@+id/btnAdd" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAdd"
         android:layout_width="64dp"
         android:layout_height="64dp"
