--- a/app/src/main/res/layout/fragment_plant.xml
+++ b/app/src/main/res/layout/fragment_plant.xml
@@ -17,13 +17,23 @@
 
         <ImageView
             android:id="@+id/iv_plant_image"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/img_1"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/scaled"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:src="@drawable/img_1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@+id/iv_plant_image"
+            app:layout_constraintStart_toEndOf="@+id/iv_plant_image"
+            app:layout_constraintTop_toTopOf="@+id/iv_plant_image" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
