--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:elevation="8dp"
-            android:text="Hello, Indosat"
+            android:text="@string/hello_indosat"
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:textColor="?attr/colorSurface"
             app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/popular_article"
+            android:text="@string/hyponics_article"
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:textColor="?attr/colorOnSurface"
             android:textStyle="bold"
@@ -117,35 +117,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/header_popular_article"
-            tools:listitem="@layout/item_article" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/header_other_article"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/other_article"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textColor="?attr/colorOnSurface"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/header_popular_article"
-            app:layout_constraintTop_toBottomOf="@+id/rv_popular_article" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_other_article"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/header_other_article"
             tools:listitem="@layout/item_article" />
 
 
