fix: remove gravity center

--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -70,8 +70,7 @@
         <ImageView
             android:id="@+id/iv_iot_result"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="300dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/imgIOT"
@@ -85,7 +84,6 @@
             android:id="@+id/tv_name_iot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:text="@string/tvNameIOT"
             android:textAlignment="center"
