--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -25,7 +25,7 @@
     <me.biubiubiu.justifytext.library.JustifyTextView
         android:id="@+id/aboutApp"
         android:layout_width="361dp"
-        android:layout_height="170dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/aboutThisApp"
         android:textAlignment="center"
