Merapikan layout IOT (1)

--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/iv_profile_image"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
