--- a/app/src/main/res/layout/fragment_detail_article.xml
+++ b/app/src/main/res/layout/fragment_detail_article.xml
@@ -38,22 +38,22 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/img" />
 
-    <ImageView
+    <Button
         android:id="@+id/iv_back"
         android:layout_width="42dp"
-        android:layout_height="46dp"
+        android:layout_height="42dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/backbutton"
-        android:src="@drawable/back"
+        android:background="@drawable/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/back" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="30dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
