--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -16,8 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginTop="20dp"
+            android:backgroundTint="@color/color_primary"
             android:elevation="8dp"
-            app:cardCornerRadius="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +38,11 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="8dp"
+                    android:contentDescription="@string/imgProfile"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@tools:sample/avatars"
-                    android:contentDescription="@string/imgProfile" />
+                    tools:src="@tools:sample/avatars" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_profile_name"
@@ -51,7 +51,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_toEndOf="@id/iv_profile_image"
                     android:textAppearance="?attr/textAppearanceListItem"
-                    android:textColor="?attr/colorOnSurface"
+                    android:textColor="?attr/colorSurface"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/iv_profile_image"
                     app:layout_constraintTop_toTopOf="@+id/iv_profile_image"
@@ -61,11 +61,12 @@
                     android:id="@+id/tv_profile_address"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="16dp"
                     android:layout_toEndOf="@id/iv_profile_image"
                     android:maxLines="2"
                     android:textAppearance="?attr/textAppearanceListItemSecondary"
+                    android:textColor="?attr/colorSurface"
                     app:layout_constraintEnd_toStartOf="@id/btn_profile_edit"
                     app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
                     app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
@@ -73,32 +74,36 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_profile_edit"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
+                    android:layout_width="82dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="10dp"
+                    android:backgroundTint="@color/hint_color_light"
                     android:clickable="false"
                     android:focusable="false"
                     android:text="@string/editProfile"
                     android:textAlignment="center"
                     android:textAllCaps="false"
+                    android:textSize="8sp"
                     app:cornerRadius="16dp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_profile_image"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/iv_profile_image"
-                    app:layout_constraintVertical_bias="0.814" />
+                    app:layout_constraintVertical_bias="1.0"
+                    tools:ignore="SmallSp" />
 
                 <ImageView
                     android:id="@+id/settings"
                     android:layout_width="31dp"
                     android:layout_height="31dp"
+                    android:layout_marginEnd="10dp"
                     android:contentDescription="@string/imgArticle"
                     android:src="@drawable/ic_baseline_settings_24"
                     app:layout_constraintBottom_toTopOf="@+id/btn_profile_edit"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.79"
+                    app:layout_constraintHorizontal_bias="0.972"
                     app:layout_constraintStart_toEndOf="@+id/tv_profile_name"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.263" />
+                    app:layout_constraintVertical_bias="0.0" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -116,15 +121,31 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile_container" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnChangeProfileIOT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorSurface"
+            android:contentDescription="@string/btnChangeProfile"
+            android:src="@drawable/ic_change_profile"
+            app:backgroundTint="@color/hint_color_light"
+            app:fabCustomSize="30dp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_iot_result"
+            app:layout_constraintEnd_toEndOf="@+id/iv_iot_result"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/iv_iot_result"
+            app:layout_constraintTop_toTopOf="@+id/iv_iot_result"
+            app:layout_constraintVertical_bias="1.0" />
+
         <ImageView
             android:id="@+id/iv_iot_result"
-            android:layout_width="0dp"
-            android:layout_height="300dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
             android:contentDescription="@string/imgIOT"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/add_photo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_iot_sensor_result" />
