--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:layout_marginStart="16dp"
@@ -17,7 +17,7 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/article_image"
-            android:layout_width="350dp"
+            android:layout_width="300dp"
             android:layout_height="180dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -29,15 +29,12 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/article_title"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="20dp"
             android:maxLines="3"
             android:textColor="?attr/colorOnSurface"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/article_image"
-            app:layout_constraintStart_toStartOf="@+id/article_image"
             app:layout_constraintTop_toBottomOf="@+id/article_image"
             tools:text="10 Cara Menanam Selada di Rumah, Bisa Ditaruh di Polybag ..." />
 
