--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/hint_color_light">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/profile_container"
@@ -74,16 +75,17 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_profile_edit"
-                    android:layout_width="82dp"
-                    android:layout_height="32dp"
-                    android:layout_marginEnd="10dp"
-                    android:backgroundTint="@color/hint_color_light"
+                    android:layout_width="106dp"
+                    android:layout_height="35dp"
+                    android:layout_marginEnd="5dp"
+                    android:backgroundTint="?attr/colorSurface"
                     android:clickable="false"
                     android:focusable="false"
                     android:text="@string/editProfile"
                     android:textAlignment="center"
                     android:textAllCaps="false"
-                    android:textSize="8sp"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="12sp"
                     app:cornerRadius="16dp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_profile_image"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -104,74 +106,95 @@
                     app:layout_constraintStart_toEndOf="@+id/tv_profile_name"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_iot_sensor_result"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/profileIOT_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/tvIOTResult"
-            android:textAlignment="center"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:layout_margin="8dp"
+            android:elevation="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_container" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_container">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnChangeProfileIOT"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorSurface"
-            android:contentDescription="@string/btnChangeProfile"
-            android:src="@drawable/ic_change_profile"
-            app:backgroundTint="@color/hint_color_light"
-            app:fabCustomSize="30dp"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_iot_result"
-            app:layout_constraintEnd_toEndOf="@+id/iv_iot_result"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/iv_iot_result"
-            app:layout_constraintTop_toTopOf="@+id/iv_iot_result"
-            app:layout_constraintVertical_bias="1.0" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayoutIOT"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_iot_result"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="20dp"
-            android:contentDescription="@string/imgIOT"
-            android:scaleType="fitXY"
-            android:src="@drawable/add_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_iot_sensor_result" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_iot_result"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="5dp"
+                    android:contentDescription="@string/imgIOT"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/add_photo"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_iot_sensor_result"
+                    app:layout_constraintStart_toStartOf="@+id/tv_iot_sensor_result"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_iot_sensor_result"
+                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_name_iot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/tvNameIOT"
-            android:textAlignment="center"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/iv_iot_result"
-            app:layout_constraintTop_toBottomOf="@+id/iv_iot_result" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_iot_sensor_result"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tvIOTResult"
+                    android:textAlignment="center"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btnChangeProfileIOT"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/colorSurface"
+                    android:contentDescription="@string/btnChangeProfile"
+                    android:src="@drawable/ic_change_profile"
+                    app:backgroundTint="@color/hint_color_light"
+                    app:fabCustomSize="30dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_iot_result"
+                    app:layout_constraintEnd_toEndOf="@+id/iv_iot_result"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@+id/iv_iot_result"
+                    app:layout_constraintTop_toTopOf="@+id/iv_iot_result"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_name_iot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tvNameIOT"
+                    android:textAlignment="center"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="15sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/iv_iot_result"
+                    app:layout_constraintStart_toStartOf="@+id/iv_iot_result"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_iot_result" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_parameter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name_iot"
+            app:layout_constraintTop_toBottomOf="@+id/profileIOT_container"
             tools:itemCount="3"
             tools:listitem="@layout/item_row_parameter" />
 
