--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
     android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     app:cardCornerRadius="30dp"
     app:cardElevation="4dp"
@@ -17,15 +17,16 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/article_image"
-            android:layout_width="300dp"
-            android:layout_height="180dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:src="@drawable/add_photo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_launcher_background" />
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/article_title"
@@ -33,8 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:maxLines="3"
-            android:textSize="16sp"
             android:textColor="?attr/colorOnSurface"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/article_image"
             tools:text="10 Cara Menanam Selada di Rumah, Bisa Ditaruh di Polybag ..." />
